Writing through lead item + cutting news summaries down

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,4 +1,4 @@
-# Yes, this is a market crash. Duh.
+# Yes, that was a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
 ![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
@@ -6,47 +6,56 @@
 
 <hr>
 
-*Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM were used for research, drafting, and editing of the newsletter this week. Final edit was all me. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub.* <!-- Check credits again before final publication. -->
+- _**A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
+
+- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, drafting, and editing of the newsletter this week. Final edit was all me. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._
 
 <hr>
 
-**TKTK.** tktktk.
+**Slate's Stephen Harrison** recently [highlighted](https://slate.com/technology/2025/04/trump-news-2025-stock-market-crash-wikipedia-controversy.html) a fascinating debate among Wikipedia editors -- whether the tariff-driven plunge in the U.S. stock market constitutes a historic "crash" or a more mundane "decline."
 
-<!-- Lead item. Riff on Slate article about Wikipedia editors debating whether this month's market turmoil constitutes a crash. Slate link and other relevant articles below... -->
+So far, "crash" has been carrying the day in the pertinent market-related [Wikipedia entry](https://en.wikipedia.org/wiki/2025_stock_market_crash). But as with everything in the community-maintained encyclopedia, that could change in the future.
 
-- Matt Phillips for Sherwood: https://sherwood.news/markets/wall-street-is-starting-to-cut-earnings-forecasts-for-the-mag-7/
+Harrison notes some interesting dynamics at play:
 
-- https://slate.com/technology/2025/04/trump-news-2025-stock-market-crash-wikipedia-controversy.html
+<blockquote>
 
-- https://arstechnica.com/tech-policy/2025/04/trumps-tariffs-could-cost-semiconductor-industry-1-billion-industry-fears/
+  *As with other debates on Wikipedia, there are basically two camps: On one side, we have the archivists, editors who believe that Wikipedia’s role is akin to that of traditional encyclopedias, which only included entries that were thought to have a long-term historical significance. The archivists point to the policy that Wikipedia is not a newspaper that should cover all current events, only those that are truly encyclopedic. Wikipedia’s archivists tend to be rather cautious and conservative about framing. It’s not known yet whether the events of April 2025 will linger in the historical memory like Black Thursday (1929), Black Monday (1987), the Flash Crash (2010), and the COVID-19 crash (2020). The archivists argue that until we have a clearer picture, Wikipedia should refrain from calling this a “crash” because it’s too politically contentious.*
 
-- https://apnews.com/article/tariffs-trump-pharmaceutical-semiconductor-chips-65b528a3ae455b197a26f61f847063ef
+  *Standing opposite of the archivists are the updaters, the Wikipedians who believe the site’s articles should reflect the current media and public framing of significant events. They point to Wikipedia’s explicit policy that it’s not a paper encyclopedia like the days of yore, but rather a digital encyclopedia project. There’s no need to delay changes until some distant future print run; the whole point of a wiki is that you can always make an edit. Quick changes are helpful because the reality is that readers are visiting Wikipedia (or accessing the same info via A.I. tools) because they want information about these events in real time.*
 
-- CoinDesk says the top 50 crypto tokens are clearly signaling a bear as well: https://www.coindesk.com/markets/2025/04/16/crypto-winter-appears-to-have-arrived-with-bitcoin-top-50-tokens-falling-into-bear-market-territory-coinbase-institutional
+</blockquote>
 
-- https://www.reuters.com/technology/us-tariffs-may-cost-chip-equipment-makers-more-than-1-billion-industry-estimates-2025-04-15/
+**For what it's worth,** speaking as someone who covered multiple market crashes over 11 years at the Wall Street Journal, we used to have a rule of thumb: A "crash" is traditionally a single-day decline of 10% or more.
 
-- https://www.fxstreet.com/news/dow-jones-slides-as-nvidia-amd-tumble-on-chip-tariffs-powell-speech-eyed-202504161707
+That said, the rule wasn't absolute. Market drops that were very rapid and historic, but didn't necessarily meet the "10% in one day" criterion, were also sometimes referred to as "crashes." The decline of the Nasdaq Composite Index beginning in March 2000 when the first dotcom bubble burst fit the latter standard, for example. Hence the Journal has frequently referred to it as a "crash" ever since.
 
-- https://www.theblock.co/post/350973/crypto-markets-nvidia-trump-china-tariffs
+This month's decline in the S&P 500 clearly seems to fit a similar bill, in my opinion. No, the index hasn't had a one-day 10% drop. But from April 3, when trading began after President Trump announced across-the-board tariffs on imports into the U.S., until the market's recent low on April 8, the S&P [fell 12%](https://www.wsj.com/finance/will-the-last-investor-to-leave-america-please-turn-out-the-lights-cdf727b4?st=FckdHs&reflink=desktopwebshare_permalink).
 
-<!-- Insert affiliate blurb -->
+A drop of that magnitude in just four trading days is plenty rapid [by historical standards](https://www.fool.com/investing/2025/04/19/sp-500-12th-biggest-4-day-decline-75-years-history/). And it was driven in this case by a seismic change in economic policy that reverses decades of American preference to make trade more open over time, not less.
 
+As far as I'm concerned, yes, that's easily enough to call it a crash.  
 
 ### Five Things: April 13-19, 2025
 
 The week's most important headlines in emerging tech:
 
-- **AI made moves in the wrong direction on disinformation.** Researchers have uncovered a Russian disinformation network, dubbed "Pravda," that manipulates Western AI chatbots to disseminate pro-Kremlin propaganda. The study highlights vulnerabilities in leading AI systems. <!-- -->... OpenAI has revised its AI safety policy by removing pre-release testing requirements for certain high-risk capabilities. Critics worry this could lead to the irresponsible deployment of manipulative AI models. | *OpenAI to Develop Social Media Platform*: OpenAI is reportedly working on a social media platform that could rival Elon Musk's X, integrating a social feed with ChatGPT's image generation capabilities. This move comes amid an escalating legal and public relations war between OpenAI and Musk, who has accused OpenAI of abandoning its nonprofit roots. The project remains in early development, with OpenAI CEO Sam Altman soliciting feedback on the concept. ([Decrypt](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk)) | *OpenAI Policy Changes Spark Concerns*
-OpenAI has updated its AI safety policy, dropping pre-release testing requirements for persuasive or manipulative capabilities and considering the release of high-risk models. This decision has sparked concerns among experts, who fear it may lead to a "race to the bottom" in AI safety. The updated policy focuses on addressing risks through terms of service and user monitoring, rather than pre-deployment testing. ([Fortune](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/)) | Researchers have found that a Russian disinformation network, known as the Pravda network, is manipulating Western AI chatbots to spread pro-Kremlin propaganda. The study found that 10 leading AI chatbots repeated falsehoods from the Pravda network more than 33% of the time, advancing a pro-Moscow agenda. This "LLM grooming" tactic poses a threat to democratic discourse worldwide and could become more pervasive in the absence of oversight. ([AFP](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn))
+- **Troubling signs on AI-powered disinformation:** Researchers say a sprawling Russian disinformation network, dubbed "Pravda," has been [seeding](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn) popular large language models with pro-Kremlin propaganda... Meanwhile, OpenAI has [revised its AI safety policy](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/), dropping pre-release testing requirements for persuasive or manipulative capabilities. The company is also [prototyping](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk) a social network that could compete with Twitter/X, according to the Verge's Kylie Robison and Alex Heath.
 
-- **Despite the washout in Big Tech shares, sentiment on AI and crypto remains bullish.**  Google search volumes for "Bitcoin" and "Ethereum" have surged to 2025 highs, reflecting growing public interest. Bitcoin searches reached a volume of 34, with Ethereum close behind. <!-- --> | *Public Companies Double Down on Bitcoin*: Major companies like MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase continue to invest heavily in Bitcoin. Strategy alone holds over 150,000 BTC, maintaining its position as a leading corporate Bitcoin investor. *Google Search Volumes Increase for Bitcoin and Ethereum.* Google search volumes for "Bitcoin" and "Ethereum" have reached their highest levels in 2025, with Bitcoin's volume at 34 and Ethereum's at 19. This marks a significant increase in retail curiosity about these cryptocurrencies, particularly Bitcoin, which has seen a 26% month-over-month rise. The uptick in interest may be linked to the newly announced U.S. tariffs and rising geopolitical tension. ([The Block](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps)) | *Tech Stocks Rebound Amid AI Hype* The tech startup ecosystem is experiencing a surge in valuations, particularly in AI-related companies, with some startups reaching valuations of $10 billion or more despite not having launched a product yet. This trend is driven by massive investments from venture capital firms and partnerships with major tech companies like Google, Microsoft, and Nvidia. The AI sector is seen as a "bright spot" amid pressure on mega-caps and volatility in the market. ([CNBC](https://www.youtube.com/watch?v=b8RFUvr_tks)) *Public Companies' Bitcoin Holdings* Several major public companies, including MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase, have invested heavily in Bitcoin, with Strategy holding the largest portfolio at 531,644 BTC (worth over $45 billion). These companies have joined the growing list of institutional investors buying into Bitcoin, with Strategy's co-founder Michael Saylor being a key figure in promoting its adoption. This trend indicates a significant shift in the way public companies view Bitcoin as a store of value. ([Decrypt](https://decrypt.co/47061/public-companies-biggest-bitcoin-portfolios)) | The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market)) | Netflix has been a bright spot: https://www.wsj.com/business/media/now-streaming-on-netflix-a-show-where-profits-trump-the-trade-war-c8706476?st=KqW5wC&reflink=desktopwebshare_permalink
+- **Investor sentiment on crypto's ruling duo remains bullish despite turbulence on Wall Street.**  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indeces suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
+
+- **But worry is mounting about the long-term quantum threat to Bitcoin.** Project 11 announced a new $85,000 bounty to test if quantum computers can break the Bitcoin network's encryption...
+
+
+The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption)) | *Quantum Computing TKTK:* *Scientists Observe Elusive Quantum Phenomenon* Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing)) | *Quantum Computing Threatens Bitcoin Security*: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols. <!-- -->
+
+
+
 
 - **Ripple Launches Asia-Focused XRP Fund**: Ripple has partnered with HashKey Capital to launch the HashKey XRP Tracker Fund, allowing Asian investors to track XRP's performance. The fund is expected to expand institutional adoption of Ripple's cryptocurrency. <!-- --> | *Stellar Blockchain Targets Real-World Assets*: Stellar aims to hold $3 billion in real-world asset (RWA) value and facilitate $110 billion in RWA transaction volume by the end of 2025. The plan includes new partnerships and expanded use cases. <!-- --> | *Stellar Blockchain Expansion.* The Stellar blockchain aims to hold $3 billion in real-world asset (RWA) value and power $110 billion in RWA volume by the end of 2025. This goal is part of new partnerships with companies like Paxos, Ondo, Etherfuse, and SG Forge, which will help facilitate tokenization of existing financial assets. This expansion is a significant increase from the $290 million in RWA on the Stellar network at the end of December 2024. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/stellar-sees-usd3b-of-real-world-assets-coming-on-chain-in-2025)) | *Ripple Partners with HashKey Capital*: Ripple has backed the launch of the HashKey XRP Tracker Fund, a new investment fund in Asia designed to track the performance of XRP. The fund will be available to professional investors and allows for cash or in-kind subscription and monthly redemption of shares. This collaboration is seen as a push into the Asian market for Ripple and its XRP cryptocurrency. ([The Block](https://www.theblock.co/post/351224/ripple-backs-new-xrp-tracker-fund-by-hashkey-capital-signaling-institutional-push-in-asia)) | Stablecoin giant Tether has invested $32 million in Bitcoin miner Bitdeer, despite the sector facing challenges. Bitcoin miners have collectively lost 25% of their value in March, with many companies struggling to recover their costs due to soaring mining difficulty. Tether's investment in Bitdeer is part of its growing interest in the Bitcoin mining space. ([Decrypt](https://decrypt.co/315305/tether-buys-bitcoin-miner-bitdeer-stock))
 
 - **Exchanges:** Kraken, a crypto exchange giant, has laid off hundreds of staff members across all areas of the business over the past several months. This move is part of the company's efforts to streamline operations and improve its earnings before interest, tax, and amortization (EBITA) ahead of a potential public listing in the U.S. Despite the layoffs, Kraken claims its business is thriving and continues to launch new products and drive revenue growth. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/kraken-sheds-hundreds-of-jobs-to-streamline-business-ahead-of-ipo-sources-say)) | *Coinbase Improves Solana Support* Coinbase has upgraded its infrastructure to better support the Solana ecosystem, addressing user complaints of withdrawal and depositing issues. The improvements include faster transaction processing times, improved liquidity, and better failsafes, resulting in a five-fold improvement in block processing throughput. This upgrade aims to meet the increasing demand for Solana transactions as the cryptocurrency scales in the future.([The Block](https://www.theblock.co/post/351197/coinbase-improves-solana-support-following-user-complaints-increases-transaction-throughput-five-fold))
 
-- **Quantum Computing Threat to Bitcoin.** A $85,000 bounty has been offered by Project 11 to test if quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption)) | *Quantum Computing TKTK:* *Scientists Observe Elusive Quantum Phenomenon* Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing)) | *Quantum Computing Threatens Bitcoin Security*: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols. <!-- -->
 
 ### The Week Ahead
 
@@ -54,7 +63,14 @@ Some upcoming stories worth watching:
 
 - Meta antitrust trial continues: | *Google Faces Antitrust Scrutiny*: A U.S. district judge has ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act. This decision underscores the company's alleged harm to advertisers and consumers. <!-- --> | **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink)) **Google Faces Antitrust Ruling**: A U.S. district judge ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act, harming advertisers and consumers. The company plans to appeal the decision. The ruling is part of a larger trend of antitrust cases against major tech companies, including Facebook and Amazon. ([Wall Street Journal](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4?st=toZKpR&reflink=desktopwebshare_permalink))
 
-- Tariffs and Martial Law Concerns:** President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php)) | EU may be using Big Tech antitrust as a bargaining chip on tariffs. https://www.wsj.com/tech/eu-meta-apple-punishment-delay-0453d7a0?st=k6w5qz&reflink=desktopwebshare_permalink
+- Tariffs and Martial Law Concerns:** - https://arstechnica.com/tech-policy/2025/04/trumps-tariffs-could-cost-semiconductor-industry-1-billion-industry-fears/
+
+- https://apnews.com/article/tariffs-trump-pharmaceutical-semiconductor-chips-65b528a3ae455b197a26f61f847063ef
+
+- https://www.reuters.com/technology/us-tariffs-may-cost-chip-equipment-makers-more-than-1-billion-industry-estimates-2025-04-15/
+
+
+ President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php)) | EU may be using Big Tech antitrust as a bargaining chip on tariffs. https://www.wsj.com/tech/eu-meta-apple-punishment-delay-0453d7a0?st=k6w5qz&reflink=desktopwebshare_permalink
 
 - **The governments of China and America are taking opposite approaches regarding their own crypto portfolios.** China's Local Governments Sell Seized Crypto Amid Trading Ban** Despite a ban on cryptocurrency trading in mainland China, local governments have been selling confiscated crypto assets to replenish public coffers. This practice, which involves private companies helping to dispose of seized assets, has raised concerns about opaque processes and potential corruption. According to Reuters, one company has facilitated the sale of over 3 billion yuan worth of cryptocurrencies in offshore markets since 2018. ([The Block](https://www.theblock.co/post/350955/china-government-selling-seized-crypto)) **US Government's Crypto Holdings** The Trump administration is exploring ways to increase the US government's Bitcoin holdings, including using funds from revalued gold certificates and import tariffs. According to Bo Hines, Executive Director of the President's Council of Advisers on Digital Assets, the administration aims to maximize every legal and fiscal lever to expand the country's crypto holdings. This move could be supported by the reintroduced Bitcoin Act of 2025. ([Cryptopolitan](https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) **Trump Family's Crypto Ventures** The Trump family has invested in various crypto projects, including nonfungible tokens, decentralized finance, memecoins, ETFs, stablecoins, and Bitcoin mining. These ventures have generated significant paper gains, approaching $1 billion, despite market fluctuations. The family's involvement in crypto has raised concerns about potential conflicts of interest given the administration's influence over regulations. ([Bloomberg](https://finance.yahoo.com/news/trump-family-going-crypto-projects-140000972.html))
 
@@ -64,15 +80,10 @@ Some upcoming stories worth watching:
 
 - **DOJ Signals Shift in Crypto Enforcement**: A recent U.S. Justice Department memo indicates a shift away from aggressive crypto enforcement under the Biden administration. The memo suggests a more measured approach moving forward. <!-- -->
 
-<hr>
-
- **A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe). 😊
-
-<hr>
 
 ### Odds & Ends
 
-- **Elon Musk's Expanding Family Plans**: Elon Musk, already a father to at least 14 children from four women, is reportedly seeking additional mothers to grow his family. Sources claim this aligns with his belief in the importance of population growth. | **Elon Musk's Reproductive Plans** Elon Musk has a large family, with at least 14 children from four women, and is reportedly seeking to recruit more mothers to have his children. According to sources, Musk uses nondisclosure clauses and financial incentives to maintain secrecy and control over the mothers and their children. His motivations for having many children include concerns about a declining population and a desire to create a "legion" of intelligent humans to ensure the survival of humanity. ([Wall Street Journal](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink))
+- **The Wall Street Journal covered** Elon Musk's ["harem drama,"](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink) perhaps in more detail than anyone really needed.
 
 - **Scientists have captured the first confirmed images** of an elusive species of deep-sea squid in its natural habitat. They used a remote vehicle to photograph the animal swimming 600 meters deep (1,968 feet) in the South Atlantic. ([CNN](https://www.cnn.com/2025/04/16/science/colossal-squid-footage/index.html))
 
